[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "aud"
author = "Zach Howard"
author-email = "zach.d.howard@gmail.com"
home-page = "https://www.github.com/zdhoward/aud"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["pydub", "begins", "colorlog", "arrow"]
requires-python=">=3.2"
description-file="README.md"
